Release 0.017:
	* Started support for 'custom' rooms not loaded from UNQ files
	* SSHD support on second binary TCP port
	* Debugged extra AUTO object, put it into appropriate places

Release 0.016:
	* Improved UNQ error reporting for wrong #'s of fields in structs
	* Added (optional, currently inactive) stuff for a /usr/common AUTO
	  object which will enforce call_other calling existing funcs
	* Updated to DGD 1.2.90
	* Moved all zone functionality out of ObjNumD into ZoneD
	* Changed object articles and glance descriptions to 'transitional',
	  i.e. kiss the current form of them goodbye...
	* Updated for compatibility with DGD 1.2.68, which breaks back-compat
	* Removed old %get_config command
	* Made objects able to specifically remove nouns/adjs for
	  multiple inheritance
	* Made load/save files use multiple parents
	* Made object nouns, adjectives and descs use inheritance
	* Made objects use multiple inheritance, not just single
	* Added wiztool commands to manipulate tags, and help for them
	* Added a number of new Tag-related APIs
	* Made rooms and zonefiles include tag data in the save files
	* Made room/object types more modular

Release 0.015pre2:
	* Tagged OBJECTs and MOBILEs
	* Added a 'Tagged' library to manage tags
	* Added a TagD to track tag types
	* Moved scripting stuff into Phantasmal from testgame/SoN
	* Added toggle for first-ever login attempt to player_login()
	* Minor fix to cmd_help
	* More debugging on user/userlib interface.

Release 0.015pre1:
	* Separated user object into a user and a userlib, with the user
	  object overridable.  More work to do here
	* Moved logd_channels from data directory into /usr/System
	* Added a game driver object, made telnetd defer to it
	* Simplified /usr/game as more stuff moves into testgame
	* Moved objects out of /data, and made it easy to do the same for
	  helpfiles
	* Moved most Phantasmal headers into include/phantasmal
	* Modified TimeD to use only real-world time