@@ -30,10 +30,12 @@ static void create(varargs int clone)
   }
 }
 
-void destructed(varargs int clone) {
-  if(SYSTEM()) {
+static void upgraded(varargs int clone) {
 
-  }
+}
+
+static void destructed(varargs int clone) {
+
 }
 
 
